<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
        <relativePath/>
    </parent>

    <groupId>com.huawei.devbridge</groupId>
    <artifactId>relay-controller</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>relay-controller</name>
    <description>Relay Controller control plane service for DevBridge tunnel metadata.</description>

    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <nimbus-jose-jwt.version>9.37.3</nimbus-jose-jwt.version>
        <springdoc-openapi.version>2.6.0</springdoc-openapi.version>
        <openapi-generator.version>7.9.0</openapi-generator.version>
        <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
        <lombok.version>1.18.46</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>io.lettuce</groupId>
                    <artifactId>lettuce-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>${nimbus-jose-jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc-openapi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi-generator.version}</version>
                <executions>
                    <execution>
                        <id>generate-openapi-interfaces</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/static/openapi.yaml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.huawei.devbridge.relaycontroller.generated.api</apiPackage>
                            <modelPackage>com.huawei.devbridge.relaycontroller.generated.model</modelPackage>
                            <generateApiTests>false</generateApiTests>
                            <generateModelTests>false</generateModelTests>
                            <generateSupportingFiles>false</generateSupportingFiles>
                            <skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
                            <globalProperties>
                                <apis></apis>
                                <models>false</models>
                                <supportingFiles>false</supportingFiles>
                            </globalProperties>
                            <configOptions>
                                <useSpringBoot3>true</useSpringBoot3>
                                <interfaceOnly>true</interfaceOnly>
                                <skipDefaultInterface>true</skipDefaultInterface>
                                <useTags>true</useTags>
                                <useResponseEntity>false</useResponseEntity>
                                <dateLibrary>java8</dateLibrary>
                            </configOptions>
                            <importMappings>
                                <importMapping>CreateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelRequest</importMapping>
                                <importMapping>UpdateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelRequest</importMapping>
                                <importMapping>RegisterNodeRequest=com.huawei.devbridge.relaycontroller.interfaces.request.RegisterNodeRequest</importMapping>
                                <importMapping>MeteringReportRequest=com.huawei.devbridge.relaycontroller.interfaces.request.MeteringReportRequest</importMapping>
                                <importMapping>CreateOttTokenRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateOttTokenRequest</importMapping>
                                <importMapping>CreateRtTokenRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateRtTokenRequest</importMapping>
                                <importMapping>CreateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelPortRequest</importMapping>
                                <importMapping>UpdateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelPortRequest</importMapping>
                                <importMapping>BooleanResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>CreateTunnelResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>TunnelDetailResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>TunnelListResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>RegisterNodeResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>NodeInfoResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>GridConfigResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>MeteringReportResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>RelayStatusResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>CreateOttTokenResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>CreateRtTokenResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>TunnelPortResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>TunnelPortListResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                                <importMapping>GatewayTunnelPortPolicyResult=com.huawei.devbridge.relaycontroller.common.model.Result</importMapping>
                            </importMappings>
                            <schemaMappings>
                                <schemaMapping>CreateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelRequest</schemaMapping>
                                <schemaMapping>UpdateTunnelRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelRequest</schemaMapping>
                                <schemaMapping>RegisterNodeRequest=com.huawei.devbridge.relaycontroller.interfaces.request.RegisterNodeRequest</schemaMapping>
                                <schemaMapping>MeteringReportRequest=com.huawei.devbridge.relaycontroller.interfaces.request.MeteringReportRequest</schemaMapping>
                                <schemaMapping>CreateOttTokenRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateOttTokenRequest</schemaMapping>
                                <schemaMapping>CreateRtTokenRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateRtTokenRequest</schemaMapping>
                                <schemaMapping>CreateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.CreateTunnelPortRequest</schemaMapping>
                                <schemaMapping>UpdateTunnelPortRequest=com.huawei.devbridge.relaycontroller.interfaces.request.UpdateTunnelPortRequest</schemaMapping>
                                <schemaMapping>BooleanResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>CreateTunnelResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>TunnelDetailResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>TunnelListResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>RegisterNodeResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>NodeInfoResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>GridConfigResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>MeteringReportResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>RelayStatusResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>CreateOttTokenResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>CreateRtTokenResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>TunnelPortResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>TunnelPortListResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                                <schemaMapping>GatewayTunnelPortPolicyResult=com.huawei.devbridge.relaycontroller.common.model.Result</schemaMapping>
                            </schemaMappings>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${build-helper-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>add-openapi-generated-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading -Xshare:off --sun-misc-unsafe-memory-access=allow</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
